Fix footer alignment

--- a/assets/styles/pages.scss
+++ b/assets/styles/pages.scss
@@ -22,8 +22,8 @@
   background-color: $forest-green;
 }
 
-.article-date-column {
-  text-align: right;
+.article-footer {
+  text-align-last: justify;
 }
 
 // Team page
